# Cali-library-isolation

./: .gitignore  .gitmodules  CMakeLists.txt  HOWTO.md  README.md  pack.sh  patch-libtool.sh
cali-linker/: .gitignore  CMakeLists.txt  config.yaml  stdlib-is-shit.h
cali-linker/cali_linker/: archive-wrapper.cpp  archive-wrapper.h  configfile.cpp  configfile.h  configfile_generator.cpp  configfile_generator.h  debug.h  ipc_rewriter.cpp  ipc_rewriter.h  linker_replacement.cpp  linker_replacement.h  randomness.cpp  randomness.h  timing-utils.h  timing_utils.cpp
cali-linker/graph/: abstract_map.h  algorithms.h  basegraph.cpp  basegraph.h  color_map.h  dotwriter.h  scc_algorithms.h  unique_vector.h
cali-linker/modules/: binary_module.cpp  communication_pair.cpp  communication_pair.h  ipc_module.cpp  ipc_module.h  llvm_module.cpp  llvm_module.h
cali-linker/passes/: DataDrivenSCCPass.cpp  DataDrivenSCCPass.h  FunctionAliasResolverPass.cpp  FunctionAliasResolverPass.h  PDG.cpp  PDG.h  PDGCreationPass.cpp  PDGCreationPass.h  PDGInstrumentPass.cpp  PDGInstrumentPass.h  PDGReachabilityPass.cpp  PDGReachabilityPass.h  PDGSharedMemoryPass.cpp  PDGSharedMemoryPass.h  PDGSharedReachabilityPass.cpp  PDGSharedReachabilityPass.h  PDGSpecializationPass.cpp  PDGSpecializationPass.h  PDGUtilities.cpp  PDGUtilities.h  PDGWriterPass.cpp  PDGWriterPass.h  SimpleSharedAnalysisPass.cpp  SimpleSharedAnalysisPass.h
cali-linker/sample_configs/: config-filezilla.yaml  config-imagemagick.yaml  config-socat.yaml  config.all.yaml  config_rewriter.yaml
cali-linker/snippets/: ipc-communication-proto.cpp  libc-stubs.c
glibc-2.23/sysdeps/unix/bsd/bsd4.4/kfreebsd/: Dist  Implies  Makefile  Versions  _exit.S  a.out.h  access.c  aio_sigqueue.c  bind.c  brk.c  check_fds.c  check_native.c  clock_getres.c  clock_gettime.c  clock_settime.c  clone.c  configure  configure.in  connect.c  cpuset-kern.h  devname.c  dl-execstack.c  dl-openat64.c  dl-origin.c  dl-osinfo.h  dl-support.c  dl-sysdep.c  dl-sysdep.h  dl-writev.h  faccessat.c  fdatasync.c  fhstat.c  fhstat64.c  fhstatfs.c  fhstatfs64.c  fstatfs.c  fstatfs64.c  fstatvfs.c  fstatvfs64.c  ftruncate64.c  (+131 more)
glibc-2.23/sysdeps/unix/bsd/bsd4.4/kfreebsd/bits/: auxv.h  dirent.h  errno.h  fcntl.h  in.h  ioctl-types.h  ioctls.h  ipc.h  local_lim.h  mman.h  msq.h  os-unistd.h  param.h  poll.h  posix_opt.h  resource.h  sched.h  sem.h  shm.h  sigaction.h  siginfo.h  signum.h  sigset.h  socket.h  stat.h  stat16.h  statfs.h  statvfs.h  sys_errlist.h  syslog-path.h  termios.h  time.h  uio.h  utsname.h  waitflags.h  waitstatus.h
glibc-2.23/sysdeps/unix/bsd/bsd4.4/kfreebsd/fbtl/: Makefile  Versions  aio_misc.h  clock_getcpuclockid.c  clock_getres.c  clock_gettime.c  clock_nanosleep.c  clock_settime.c  fatal-prepare.h  fork.c  gai_misc.h  internaltypes.h  kernel-posix-timers.h  libc_multiple_threads.c  libc_pthread_init.c  lowlevellock.c  lowlevellock.h  pt-raise.c  pthread_attr_getaffinity.c  pthread_attr_setaffinity.c  pthread_getaffinity.c  pthread_getcpuclockid.c  pthread_getname.c  pthread_getschedparam.c  pthread_kill.c  pthread_mutex_cond_lock.c  pthread_once.c  pthread_setaffinity.c  pthread_setname.c  pthread_setschedparam.c  pthread_setschedprio.c  pthread_sigmask.c  raise.c  register-atfork.c  sem_post.c  sem_timedwait.c  sem_wait.c  sigprocmask.c  sigtimedwait.c  sigwait.c  (+11 more)
glibc-2.23/sysdeps/unix/bsd/bsd4.4/kfreebsd/i386/: Makefile  Versions  c++-types.data  dl-machine.h  dl-procinfo.h  exit-thread.h  get_clockfreq.c  getcontext.S  i386_get_ioperm.c  i386_get_ldt.c  i386_set_ioperm.c  i386_set_ldt.c  i386_vm86.c  iopl.c  ld.abilist  ldconfig.h  libc.abilist  libm.abilist  libresolv.abilist  librt.abilist  localplt.data  lseek.S  makecontext.S  rfork.S  shlib-versions  sigcontextinfo.h  start.S  start_thread.S  swapcontext.S  sys_fork.S  sysarch.h  syscall.S  syscalls-internal.h  sysdep.S  sysdep.h  ucontext_i.h  vfork.S
glibc-2.23/sysdeps/unix/bsd/bsd4.4/kfreebsd/mips/: ____longjmp_chk.c  dl-machine.h  entry.h  start.S  start_thread.S
glibc-2.23/sysdeps/unix/bsd/bsd4.4/kfreebsd/net/: ethernet.h  if.h  if_ether.h
glibc-2.23/sysdeps/unix/bsd/bsd4.4/kfreebsd/netinet/: icmp6.h  if_ether.h  ip_icmp.h  tcp.h
glibc-2.23/sysdeps/unix/bsd/bsd4.4/kfreebsd/nfs/: nfs.h
glibc-2.23/sysdeps/unix/bsd/bsd4.4/kfreebsd/sys/: kd.h  mount.h  ptrace.h  reboot.h  rfork.h  socketvar.h  swap.h  syscall.h  sysmacros.h  (+3 more)
instrumentations/: CMakeLists.txt  instrument-dbus-daemon.c  instrument-filezilla.c  instrument-gpg.c  instrument-imagemagick.c  instrument-mandb.c  instrument-socat.c  instrument-xz.c  lib-gzip.h  lib-internal.h  lib-ksba.h  lib-lzma.h  lib-openssl.h  lib-sqlite3.h  lib-zlib.h  read_mprotect.h  utils.h
libipc/: .gitignore  CMakeLists.txt  byte_bitset.h  debug.h  file_descriptor_manager.cpp  file_descriptor_manager.h  file_descriptor_send.h  gdb.h  hook.hpp  ipc_communication.cpp  ipc_communication.h  ipc_constants.cpp  ipc_constants.h  ipc_semaphore_fork.cpp  libc_fatal.c  libipcConfig.cmake  linker-resolve-dummy.c  mappings.cpp  mappings.h  program_params.h  seccomp.cpp  seccomp.h  shared_lock.h  shared_memory_locking.cpp  shared_memory_locking.h  shared_memory_manager.cpp  shared_memory_manger.h  shared_memory_wrapper.cpp  shm_malloc.h  signals.cpp  signals.h  static_resources.cpp
libipc/bpf/: .gitignore  seccomp_constants.h  syscall_filter_mprotect.bpf  syscall_filter_sequential.bpf
libipc/include/libipc/: annotations.h
libipc/instrument/: IntervalTree.h  coverage.cpp  instrumentation.cpp
libipc/malloc/: arena.c.h  common_header.h  hooks.c.h  linkrepair_c.c  malloc.c  malloc.h  renamed_functions.h
libipc/malloctest/: malloc_tester.cpp  malloc_tester.h  order_statistic_tree.h
libipc/other_inclues/: malloc.h
libipc/tests/: test_fork_malloc.cpp  test_initializer.h  test_pythondemo.cpp
libnsjail/: CMakeLists.txt  FindNL.cmake  libnsjailConfig.cmake
libnsjail/include/nsjail/: api.h  common.h  fork.h
libnsjail/src/libnsjail/: api.cc  cmdline_utils.h  fork.cc
libnsjail/src/nsjail/: cmdline.cc  config.cc  logs.cc  mnt.cc  nsjail.h  subproc.cc
(+1074 files in other folders)
